fix the container spacing

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body{
+  min-height: 100vh;
   background-color: hsl(212, 45%, 89%);
   font-family: 'Outfit', sans-serif;
   display: flex;
@@ -11,7 +12,6 @@ main{
 display: flex;
   justify-content: center;
   align-items: center;
-    margin-top: 80px;
 }
 
 p{
